--- a/package.json
+++ b/package.json
@@ -20,66 +20,72 @@
    "private": true,
    "preferGlobal": true,
    "devDependencies": {
-      "browser-sync": "^2.18.13",
-      "bs-html-injector": "^3.0.3",
-      "cdnjs": "^0.3.2",
-      "compass-importer": "^0.4.1",
-      "connect-modrewrite": "^0.10.1",
-      "del": "^3.0.0",
-      "gulp": "^3.9.1",
-      "gulp-autoprefixer": "^4.0.0",
-      "gulp-cache-bust": "^1.1.0",
-      "gulp-cdnizer": "^1.1.7",
-      "gulp-changed": "^3.1.0",
-      "gulp-clean-css": "^3.9.0",
-      "gulp-compass": "^2.1.0",
-      "gulp-concat": "^2.6.1",
-      "gulp-consolidate": "^0.2.0",
-      "gulp-cssnano": "^2.1.2",
-      "gulp-data": "^1.2.1",
-      "gulp-extname": "^0.2.2",
-      "gulp-header": "^1.8.9",
-      "gulp-if": "^2.0.2",
-      "gulp-imagemin": "^3.4.0",
-      "gulp-inject": "^4.3.0",
-      "gulp-inline-image": "^1.0.0",
-      "gulp-load-plugins": "^1.5.0",
-      "gulp-minify-css": "^1.2.4",
-      "gulp-notify": "^3.0.0",
-      "gulp-open": "^2.0.0",
-      "gulp-postcss": "^7.0.0",
-      "gulp-preprocess": "^2.0.0",
-      "gulp-rename": "^1.2.2",
-      "gulp-sass": "^3.1.0",
-      "gulp-sourcemaps": "^2.6.1",
-      "gulp-uglify": "^3.0.0",
-      "gulp-uncss": "^1.0.6",
-      "gulp-util": "^3.0.8",
-      "gulp-zip": "^4.0.0",
-      "home": "^1.0.1",
-      "inquirer": "^3.3.0",
-      "klaw": "^2.1.0",
-      "merge-stream": "^1.0.1",
-      "panini": "^1.5.1",
-      "process-nextick-args": "^1.0.7",
-      "pseudomap": "^1.0.2",
-      "run-sequence": "^2.2.0",
-      "through2": "^2.0.3",
-      "util-deprecate": "^1.0.2",
-      "yargs": "^9.0.1"
-   },
-   "dependencies": {
-      "bootstrap": "^4.0.0-beta",
-      "fastclick": "^1.0.6",
-      "gsap": "^1.20.3",
-      "hammerjs": "^2.0.8",
-      "handlebars": "^4.0.11",
-      "jquery": "^3.2.1",
-      "localforage": "^1.5.2",
-      "mustache": "^2.3.0",
-      "perfect-scrollbar": "^1.1.0",
-      "underscore": "^1.8.3",
-      "velocity-animate": "^1.5.0",
-      "viewport-units-buggyfill": "^0.6.2"
-   }
+    "browser-sync": "^2.18.13",
+    "bs-html-injector": "^3.0.3",
+    "cdnjs": "^0.3.2",
+    "compass-importer": "^0.4.1",
+    "connect-modrewrite": "^0.10.1",
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-cache-bust": "^1.1.0",
+    "gulp-cdnizer": "^1.1.7",
+    "gulp-changed": "^3.1.0",
+    "gulp-clean-css": "^3.9.0",
+    "gulp-compass": "^2.1.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-consolidate": "^0.2.0",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-data": "^1.2.1",
+    "gulp-extname": "^0.2.2",
+    "gulp-header": "^1.8.9",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.4.0",
+    "gulp-inject": "^4.3.0",
+    "gulp-inline-image": "^1.0.0",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-notify": "^3.0.0",
+    "gulp-open": "^2.0.0",
+    "gulp-order": "^1.1.1",
+    "gulp-postcss": "^7.0.0",
+    "gulp-preprocess": "^2.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sort": "^2.0.0",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-uglify": "^3.0.0",
+    "gulp-uncss": "^1.0.6",
+    "gulp-util": "^3.0.8",
+    "gulp-zip": "^4.0.0",
+    "home": "^1.0.1",
+    "inquirer": "^3.3.0",
+    "klaw": "^2.1.0",
+    "merge-stream": "^1.0.1",
+    "panini": "^1.5.1",
+    "process-nextick-args": "^1.0.7",
+    "pseudomap": "^1.0.2",
+    "run-sequence": "^2.2.0",
+    "through2": "^2.0.3",
+    "util-deprecate": "^1.0.2",
+    "yallist": "^3.0.2",
+    "yargs": "^9.0.1"
+  },
+  "dependencies": {
+    "animejs": "^2.2.0",
+    "bootstrap": "^4.0.0-beta.2",
+    "fastclick": "^1.0.6",
+    "gsap": "^1.20.3",
+    "hammerjs": "^2.0.8",
+    "handlebars": "^4.0.11",
+    "howler": "^2.0.5",
+    "jquery": "^3.2.1",
+    "localforage": "^1.5.2",
+    "locate-path": "^2.0.0",
+    "mustache": "^2.3.0",
+    "perfect-scrollbar": "^1.1.0",
+    "underscore": "^1.8.3",
+    "velocity-animate": "^1.5.0",
+    "viewport-units-buggyfill": "^0.6.2"
+  }
 }
