--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
       "gulp-imagemin": "^3.4.0",
       "gulp-inject": "^4.3.0",
       "gulp-inline-image": "^1.0.0",
+      "gulp-javascript-obfuscator": "^1.1.2",
       "gulp-load-plugins": "^1.5.0",
       "gulp-minify-css": "^1.2.4",
       "gulp-notify": "^3.0.0",
