--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ build
 .idea/code-comments.xml
 .idea/runConfigurations/
 /src/scss/others/_fonts.scss
+.idea/modules.xml
+.idea/web-boilerplate.iml
+.idea/workspace.xml
+.idea/vagrant.xml
+src/scss/others/fonts.scss
