--- a/package.json
+++ b/package.json
@@ -14,32 +14,32 @@
   "dependencies": {
     "animejs": "^2.2.0",
     "barba.js": "^1.0.0",
-    "bootstrap": "4.0.0-beta.2",
+    "bootstrap": "4.0.0",
     "fastclick": "^1.0.6",
     "foundation-sites": "^6.4.4-rc1",
-    "gsap": "^1.20.3",
-    "hamsterjs": "^1.1.2",
-    "howler": "^2.0.7",
-    "jquery": "^3.2.1",
+    "gsap": "^1.20.4",
+    "hamsterjs": "^1.1.3",
+    "howler": "^2.0.9",
+    "jquery": "^3.3.1",
     "jquery-visibility": "^1.0.11",
     "js-cookie": "^2.2.0",
-    "npm-check-updates": "^2.14.0",
+    "npm-check-updates": "^2.14.1",
     "snapsvg": "^0.5.1",
     "underscore": "^1.8.3",
-    "velocity-animate": "^1.5.0",
+    "velocity-animate": "^1.5.1",
     "viewport-units-buggyfill": "^0.6.2"
   },
   "devDependencies": {
-    "browser-sync": "^2.23.3",
+    "browser-sync": "^2.23.6",
     "bs-html-injector": "^3.0.3",
     "cdnjs": "^0.3.2",
     "compass-importer": "^0.4.1",
     "connect-modrewrite": "^0.10.2",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.1.0",
-    "gulp-cache-bust": "^1.1.0",
-    "gulp-cdnizer": "^1.1.7",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-cache-bust": "^1.3.0",
+    "gulp-cdnizer": "^2.0.0",
     "gulp-changed": "^3.2.0",
     "gulp-clean-css": "^3.9.2",
     "gulp-compass": "^2.1.0",
@@ -49,40 +49,40 @@
     "gulp-data": "^1.3.1",
     "gulp-exit": "^0.0.2",
     "gulp-extname": "^0.2.2",
-    "gulp-header": "^1.8.9",
+    "gulp-header": "^2.0.1",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
-    "gulp-inject": "^4.3.0",
+    "gulp-inject": "^4.3.1",
     "gulp-inline-image": "^1.0.0",
     "gulp-javascript-obfuscator": "^1.1.4",
     "gulp-load-plugins": "^1.5.0",
     "gulp-minify-css": "^1.2.4",
-    "gulp-notify": "^3.1.0",
-    "gulp-open": "^2.1.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-open": "^3.0.0",
     "gulp-order": "^1.1.1",
     "gulp-postcss": "^7.0.1",
     "gulp-preprocess": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sort": "^2.0.0",
-    "gulp-sourcemaps": "^2.6.3",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulp-uncss": "^1.0.6",
     "gulp-util": "^3.0.8",
     "gulp-zip": "^4.1.0",
     "home": "^1.0.1",
-    "inquirer": "^4.0.2",
+    "inquirer": "^5.1.0",
     "klaw": "^2.1.1",
     "merge-stream": "^1.0.1",
-    "panini": "^1.5.1",
+    "panini": "^1.6.2",
     "process-nextick-args": "^2.0.0",
     "pseudomap": "^1.0.2",
     "run-sequence": "^2.2.1",
     "through2": "^2.0.3",
     "util-deprecate": "^1.0.2",
-    "vinyl-ftp": "^0.6.0",
+    "vinyl-ftp": "^0.6.1",
     "yallist": "^3.0.2",
-    "yargs": "^10.0.3"
+    "yargs": "^11.0.0"
   },
   "ignore": [
     "**/.*",
