--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jquery": "^3.3.1",
     "jquery-visibility": "^1.0.11",
     "js-cookie": "^2.2.0",
+    "ncu": "^0.2.1",
     "npm-check-updates": "^2.14.1",
     "snapsvg": "^0.5.1",
     "underscore": "^1.8.3",
@@ -41,15 +42,15 @@
     "gulp-cache-bust": "^1.3.0",
     "gulp-cdnizer": "^2.0.0",
     "gulp-changed": "^3.2.0",
-    "gulp-clean-css": "^3.9.2",
+    "gulp-clean-css": "^3.9.3",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.1",
     "gulp-consolidate": "^0.2.0",
-    "gulp-cssnano": "^2.1.2",
+    "gulp-cssnano": "^2.1.3",
     "gulp-data": "^1.3.1",
     "gulp-exit": "^0.0.2",
     "gulp-extname": "^0.2.2",
-    "gulp-header": "^2.0.1",
+    "gulp-header": "^2.0.5",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-inject": "^4.3.1",
@@ -58,12 +59,12 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-notify": "^3.2.0",
-    "gulp-open": "^3.0.0",
+    "gulp-open": "^3.0.1",
     "gulp-order": "^1.1.1",
     "gulp-postcss": "^7.0.1",
     "gulp-preprocess": "^2.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "^3.2.1",
     "gulp-sort": "^2.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
@@ -71,7 +72,7 @@
     "gulp-util": "^3.0.8",
     "gulp-zip": "^4.1.0",
     "home": "^1.0.1",
-    "inquirer": "^5.1.0",
+    "inquirer": "^5.2.0",
     "klaw": "^2.1.1",
     "merge-stream": "^1.0.1",
     "panini": "^1.6.2",
