--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "4.0.0",
     "fastclick": "^1.0.6",
     "foundation-sites": "^6.4.4-rc1",
+    "gsap": "^1.20.4",
     "hamsterjs": "^1.1.3",
     "howler": "^2.0.9",
     "jquery": "^3.3.1",
